# vim: set noexpandtab:
2013-06-18 Matt
	* Moved to cutting on ptcone30ElStyle for muons for 2 lep analysis.
	
2013-06-17 Steve
	* Object selection updates for 3L
		* Both 2L/3L now using unbiased IP
		* Signal jets now require jvf>0.5 only for jets with pt<50 and |detEta|<2.4
			* Still keeping pt>20 and |eta|<2.5 otherwise
	* Cleaned up isSignal ele and mu methods
	* Added new D3PDTag enum value D3PD_p1512

2013-06-10 Steve
	* Corrected overlap removal with taus (thanks Estel)
		* Removal of taus from leptons done before lep-jet OR
		* Removal of jets from taus is still kept at the end

2013-06-10 Steve
	* Added control for ID level of all three tau selection cuts: jetBDT, eleBDT, muVeto
	* Commented out getSignalObjects method which doesn't save baseline objects
		* Baseline objects are needed for cleaning cuts
	* Modified default tau selection
		* Baseline and signal taus are the same: medium ID with loose ele BDT
			* These taus are used for the overlap removal!
		* Tight taus have all tight ID
	* Modified overlap removal prescription
		* Tau overlap done last to de-couple taus and leptons for consistent bkg estimations
	* Tagging SusyNtuple-00-00-59

2013-06-07 Steve
	* Added preElectrons, preMuons, preJets vectors to SusyNtAna
	* New getBaselineObjects methods now fill the pre-object vectors above
		* Needed for the on-the-fly cleaning cuts
	* Added new methods for computing object cleaning cuts on-the-fly
		* cleaningCutFlags returns a recomputed cutFlag bitword
		* hasHotSpotJet checks for hot tile jets
		* hasBadJet checks for very loose bad jets
		* hasCosmicMuon checks for cosmic flagged muon
		* hasBadMuon checks for bad muon
	* Made object vectors in object selection methods const reference
	* Updated Susy3LepCutflow to use new cleaning cuts
	* Tagging SusyNtuple-00-00-58

2013-06-06 Steve
	* Tagging SusyNtuple-00-00-57

2013-06-05 Steve
	* Added missing variable statements in Jet copy/assignment constructors